[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["matplotlib", "opencv-python", "numpy",
        "tqdm", "scikit-image", "rich",
        "scipy", "apread", "Pillow", "reportlab",
        "pylibdmtx", "typer", "openpyxl", "xlsxwriter", "scienceplots",
        "deprecated", "spazial==0.1.11", "splintaz==0.1.5",]

name = "fracsuite"
version = "1.1.0"
authors = [
  { name="Leon Bohmann", email="mail@leonbohmann.de" },
]
description = "Package to help analyze fracture patterns on broken glass plys."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/leonbohmann/fracture-suite"
"Bug Tracker" = "https://github.com/leonbohmann/fracture-suite/issues"

[project.scripts]
fracsuite = "fracsuite.__main__:app"

[tool.ruff]
# Skip unused variable rules (`F841`).
ignore = ["E501"]